--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:studio": "npx drizzle-kit studio",
+    "db:push": "npx drizzle-kit push:pg",
+    "db:migrate": "npx drizzle-kit generate:pg"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -15,10 +18,13 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
     "next": "latest",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.5",
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -27,6 +33,7 @@
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "drizzle-kit": "^0.28.0",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
