--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=https://*******.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=ey******************your-anon-key******************w
+DATABASE_URL=postgresql://pos*******************
